...
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_theme">System</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="back_button_desc">Back</string>
    <string name="orders_title">Orders</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="select_menu_items_title">Select Menu Items</string>
    <string name="item_details_title">Item Details</string>
    <string name="order_app_title">Menu</string>
    <string name="error_active_order_id_missing">Error: Active order ID is missing for Menu Screen.</string>
    <string name="add_item_details_loading">Loading item details…</string>
    <string name="add_item_details_edit_title">Edit Details for:</string>
    <string name="add_item_details_add_title">Add Details for:</string>
...
