...
import com.example.lab1.ui.feature.settings.SettingsScreen
import com.example.lab1.ui.navigation.AppDestinations
import com.example.lab1.ui.navigation.BottomNavItem
import com.example.lab1.ui.navigation.bottomNavItems


const val MENU_SCREEN_MISSING_ORDER_ID_ERROR_TAG = "menu_screen_missing_order_id_error"

@Composable
fun MainAppScreen(outerNavController: NavHostController) {
    val innerNavController: NavHostController = rememberNavController()
    val navBackStackEntry by innerNavController.currentBackStackEntryAsState()
    val currentRoute = navBackStackEntry?.destination?.route
...
